objects/ssot__SalesOrderChangeLog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeSalesOrderId__c</fullName>
        <label>Change Sales Order Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeSalesOrderProductId__c</fullName>
        <label>Change Sales Order Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Change Log Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Sales Order Change Log Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedSalesOrderId__c</fullName>
        <label>Related Sales Order Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedSalesOrderProductId__c</fullName>
        <label>Related Sales Order Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216647_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderChangeLog_ChangeSalesOrder_rel</label>
        <referenceTo>ssot__SalesOrder__dlm</referenceTo>
        <relationshipLabel>SalesOrderChangeLog_ChangeSalesOrder_rel</relationshipLabel>
        <relationshipName>rel_1697761216647_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216711_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderChangeLog_ChangeSalesOrder_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>SalesOrderChangeLog_ChangeSalesOrder_rel</relationshipLabel>
        <relationshipName>rel_1697761216711_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217786_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderChangeLog_RelatedSalesOrde_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>SalesOrderChangeLog_RelatedSalesOrde_rel</relationshipLabel>
        <relationshipName>rel_1697761217786_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>